# ILOSS

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  Req.md  debug_srp_calc  debug_srp_calc.cpp  test_atmo_density  test_atmo_density.cpp  test_drag_debug  test_drag_debug.cpp  test_drag_direction  test_drag_direction.cpp  test_drag_minimal  test_drag_minimal.cpp  test_dynamics_arithmetic  test_dynamics_arithmetic.cpp  test_initial_state  test_initial_state.cpp  test_j2000  test_j2000.cpp  test_orbital_period  test_orbital_period.cpp  test_quaternion_derivative.cpp  test_realistic_drag  test_realistic_drag.cpp  test_srp_accel  test_srp_accel.cpp  test_srp_debug  test_srp_debug.cpp  test_sun_distance  test_sun_distance.cpp  test_sun_pos_j2000  test_sun_pos_j2000.cpp
Documentation/: 6DOF_Dynamics_Guide.md  ILOSS_Project_Plan.md  ILOSS_Requirements_v4.md
cmake/: CodeCoverage.cmake
cmake/modules/: ILOSSConfig.cmake
data/aerodynamics/: example_rocket_coefficients.csv  simple_test_coefficients.csv
data/config/: default.json  high_fidelity.json  performance.json  real_time.json
data/gravity/: sample_coefficients.txt
docs/: Doxyfile.in
examples/: 6dof_satellite_simulation.cpp  CMakeLists.txt  propulsion_example.cpp  two_body_example.cpp
examples/plugins/example_force_model/: CMakeLists.txt  ExampleForceModelPlugin.cpp  ExampleForceModelPlugin.h  README.md
include/data/database/: BaseDAO.h  DatabaseManager.h  DatabaseSchema.h  LaunchSiteDAO.h  MigrationManager.h  MissionDAO.h  QueryBuilder.h  VehicleDAO.h
include/data/database/entities/: LaunchSite.h  Mission.h  Vehicle.h
include/physics/aerodynamics/: AerodynamicCalculator.h  AerodynamicCoefficients.h  AerodynamicDatabase.h  AerodynamicForceModel.h  AerodynamicTorqueModel.h
include/physics/dynamics/: DynamicsEngine.h  DynamicsIntegrator.h  DynamicsState.h  IMassProperties.h  ITorqueModel.h  SimpleMassProperties.h  TorqueAggregator.h
include/physics/dynamics/torques/: GravityGradientTorque.h
include/physics/forces/: ForceAggregator.h  ForceModel.h  ForceModelRegistry.h  IAttitudeAwareForceModel.h  SimpleGravityModel.h
include/physics/forces/drag/: DragForceModel.h  (+1 more)
include/physics/integrators/: DynamicsIntegratorAdapter.h  GenericIntegrator.h  GenericRK4Integrator.h  GenericRK78Integrator.h  IIntegrator.h  RK4Integrator.h  RK78Integrator.h  StateConcepts.h  StepSizeController.h
include/physics/state/: StateHistory.h  StateVector.h
include/test_framework/: LoggerTestFixture.h
src/: CMakeLists.txt  main.cpp
src/data/: CMakeLists.txt
src/data/database/: CMakeLists.txt  DatabaseManager.cpp  MissionDAO.cpp
src/physics/: CMakeLists.txt
src/physics/aerodynamics/: AerodynamicCalculator.cpp  AerodynamicCoefficients.cpp  AerodynamicDatabase.cpp  AerodynamicForceModel.cpp  AerodynamicTorqueModel.cpp  CMakeLists.txt
src/physics/dynamics/: CMakeLists.txt  DynamicsEngine.cpp  DynamicsState.cpp  SimpleMassProperties.cpp  TorqueAggregator.cpp
src/physics/dynamics/torques/: CMakeLists.txt  GravityGradientTorque.cpp
src/physics/forces/: CMakeLists.txt  ForceAggregator.cpp  ForceModelRegistry.cpp  RegisterStandardModels.cpp  SimpleGravityModel.cpp
src/physics/forces/drag/: CMakeLists.txt  DragForceModel.cpp  NRLMSISE00Atmosphere.cpp
src/physics/forces/gravity/: CMakeLists.txt  EarthGravityModel.cpp
src/physics/forces/srp/: CMakeLists.txt  SolarRadiationPressureModel.cpp
src/physics/forces/thirdbody/: CMakeLists.txt  ThirdBodyForceModel.cpp
src/physics/forces/twobody/: CMakeLists.txt  ConicSectionUtilities.cpp  KeplerPropagator.cpp  TwoBodyAnalyticalPropagator.cpp  TwoBodyForceModel.cpp
src/physics/integrators/: CMakeLists.txt  RK4Integrator.cpp  RK78Integrator.cpp  StepSizeController.cpp
src/physics/propulsion/: CMakeLists.txt  Engine.cpp  PropellantTank.cpp  PropulsionSystem.cpp  ThrustForceModel.cpp  ThrustVectorControl.cpp
src/physics/state/: CMakeLists.txt  StateHistory.cpp  StateVector.cpp
tests/: CMakeLists.txt  test_libraries.cpp  test_logger_debug.cpp  test_main.cpp  test_srp_debug.cpp
tests/data/: CMakeLists.txt
tests/data/database/: CMakeLists.txt  test_DatabaseManager.cpp  test_DatabaseManagerMinimal.cpp  test_MissionDAO.cpp
tests/framework/: CMakeLists.txt  test_framework_demo.cpp  test_framework_simple.cpp
tests/framework/benchmarks/: BenchmarkBase.h
tests/framework/fixtures/: TestFixtureBase.cpp  TestFixtureBase.h
tests/framework/generators/: TestDataGenerator.h
tests/framework/mocks/: MockDatabase.h  MockEventListener.h  MockLogger.h  MockPlugin.h
tests/framework/utilities/: TestUtilities.h
tests/physics/: CMakeLists.txt
tests/physics/aerodynamics/: CMakeLists.txt  test_AerodynamicCalculator.cpp  test_AerodynamicCoefficients.cpp  test_AerodynamicDatabase.cpp  test_AerodynamicForceModel.cpp  test_AerodynamicTorqueModel.cpp  test_AerodynamicsIntegration.cpp
tests/physics/dynamics/: CMakeLists.txt  test_6DOF_Integration.cpp  test_DynamicsEngine.cpp  test_DynamicsIntegrator.cpp  test_DynamicsState.cpp  test_GravityGradientTorque.cpp  test_SimpleMassProperties.cpp  test_TorqueAggregator.cpp
tests/physics/forces/: CMakeLists.txt  test_ForceAggregator.cpp  test_ForceModel.cpp  test_ForceModelRegistry.cpp
tests/physics/forces/drag/: CMakeLists.txt  test_DragForceModel.cpp  test_NRLMSISE00Atmosphere.cpp
tests/physics/forces/gravity/: CMakeLists.txt  test_EarthGravityModel.cpp
tests/physics/forces/srp/: CMakeLists.txt  test_SolarRadiationPressure.cpp
tests/physics/forces/thirdbody/: CMakeLists.txt  ThirdBodyForceModelTest.cpp
tests/physics/forces/twobody/: CMakeLists.txt  ConicSectionUtilitiesTest.cpp  KeplerPropagatorTest.cpp  TwoBodyAnalyticalPropagatorTest.cpp  TwoBodyForceModelTest.cpp
tests/physics/integrators/: CMakeLists.txt  test_CoupledDynamicsIntegration.cpp  test_RK4Integrator.cpp  test_RK78Integrator.cpp  test_StepSizeController.cpp
tests/physics/propulsion/: CMakeLists.txt  test_PropellantTank.cpp
tests/physics/state/: CMakeLists.txt  test_StateHistory.cpp  test_StateVector.cpp
tools/: download_spice.sh
(+13 files in other folders)
